<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/mxa_app_name">

	<PreferenceCategory android:title="@string/mxa_pref_xmpp_server">

		<EditTextPreference android:key="pref_host"
			android:title="@string/mxa_pref_host_title" android:summary="@string/mxa_pref_host_summary"
			android:dialogTitle="@string/mxa_pref_host_dialogtitle" />

		<EditTextPreference android:key="pref_port"
			android:title="@string/mxa_pref_port_title" android:summary="@string/mxa_pref_port_summary"
			android:dialogTitle="@string/mxa_pref_port_dialogtitle" />

		<EditTextPreference android:key="pref_service"
			android:title="@string/mxa_pref_service_title" android:summary="@string/mxa_pref_service_summary"
			android:dialogTitle="@string/mxa_pref_service_dialogtitle" />

		<EditTextPreference android:key="pref_resource"
			android:title="@string/mxa_pref_resource_title" android:summary="@string/mxa_pref_resource_summary"
			android:dialogTitle="@string/mxa_pref_resource_dialogtitle" android:defaultValue="@string/mxa_pref_resource_default"/>

	</PreferenceCategory>



	<PreferenceCategory android:title="@string/mxa_pref_xmpp_credentials">
		<EditTextPreference android:key="pref_xmpp_user"
			android:dialogTitle="@string/mxa_pref_xmpp_user_dialogtitle"
			android:title="@string/mxa_pref_xmpp_user_title" android:summary="@string/mxa_pref_xmpp_user_summary"></EditTextPreference>
		<EditTextPreference android:key="pref_xmpp_password"
			android:dialogTitle="@string/mxa_pref_xmpp_password_dialogtitle"
			android:title="@string/mxa_pref_xmpp_password_title" android:summary="@string/mxa_pref_xmpp_password_summary"></EditTextPreference>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/mxa_pref_xmpp_debug">
	<CheckBoxPreference android:key="pref_xmpp_debug_enabled"
			
			android:title="Activate debugging" 
			android:summary="Activate/Deactivate debugging"
			android:defaultValue="false"></CheckBoxPreference>
		<Preference android:key="pref_xmpp_debug_directory"
			android:dialogTitle="@string/mxa_pref_xmpp_debug_directory_dialogtitle"
			android:title="@string/mxa_pref_xmpp_debug_directory_title" android:summary="@string/mxa_pref_xmpp_debug_directory_summary"></Preference>
	</PreferenceCategory>
	
	
	<PreferenceCategory android:title="Advanced Settings">
	  <PreferenceScreen
                android:key="MXA Advanced Configuration"
                android:title="MXA Advanced Configuration"
                android:summary="Change settings for communcation">
               
                <CheckBoxPreference android:key="pref_xmpp_encryption"
			
					android:title="Enable encryption" 
					android:summary="Activate/Deactivate encryption of XMPP communication"
					android:defaultValue="true"></CheckBoxPreference>
				<CheckBoxPreference android:key="pref_xmpp_compression"
			
					android:title="Enable compression" 
					android:summary="Activate/Deactivate compression"
					android:defaultValue="false"></CheckBoxPreference>
				 <EditTextPreference android:key="pref_xmpp_retry_timeout" 
               		android:summary="Timeout interval between two tries to send an iq in seconds"
                	android:defaultValue="10"
                	android:title="Retry timeout"> </EditTextPreference>
                 <EditTextPreference android:key="pref_xmpp_lost_timeout" 
               		android:summary="Interval after which MXA should give up retring for one packet in minutes"
                	android:defaultValue="60"
                	android:title="Lost packet timeout"> </EditTextPreference>
                <EditTextPreference android:key="pref_xmpp_retry_count" 
               		android:summary="Total count of resending tries for one packet"
                	android:defaultValue="10"
                	android:title="Count of retries"> </EditTextPreference>
                 <EditTextPreference android:key="pref_xmpp_interval_packet" 
               		android:summary="Timeout for one packet"
                	android:defaultValue="5"
                	android:title="Packet interval"> </EditTextPreference>	
                  			 			
        </PreferenceScreen>
   </PreferenceCategory>
</PreferenceScreen>